[workspace]
members = [ "workers/global-feed-cache-job", "workers/sample-worker", "workers/yral-ml-feed-cache","workers/yral-onchain-backend", "workers/icpump_token_cleanup", "workers/yral-pump-n-dump"]
resolver = "2"

[workspace.dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.49"
ic-agent = "0.39.1"
getrandom = { version = "0.2", features = ["js"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11"
