[workspace]
members = [
    "workers/global-feed-cache-job",
    "workers/sample-worker",
    "workers/yral-ml-feed-cache",
    "workers/yral-onchain-backend",
    "workers/icpump_token_cleanup",
    "workers/kv-fetch",
    "workers/yral-upload-video",
    "workers/yral-pump-n-dump",
    "workers/yral-hot-or-not",
    "worker-utils"
]
resolver = "2"

[workspace.dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.49"
ic-agent = "0.39.1"
getrandom = { version = "0.2", features = ["js"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
worker-utils = { package = "yral-worker-utils", path = "worker-utils" }
num-bigint = "0.4.6"
candid = "0.10.11"
enum_dispatch = "0.3.13"