[package]
name = "icpump_token_cleanup"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
serde.workspace = true
serde_json.workspace = true
cfg-if = "0.1.2"
console_error_panic_hook.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde_with = "1.5"
workers = "0.0.13"

[profile.release]
lto = true
strip = true
codegen-units = 1
