[package]
name = "icpump_token_cleanupr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10.0"
ic-agent = "0.38.0"
reqwest = { version = "0.11", features = ["json"] }
stringreader = "0.1"
futures = "0.3"