[package]
name = "icpump_token_cleanup"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10.0"
ic-agent = { version = "0.39.1", default-features = false, features = ["wasm-bindgen"] }
reqwest = { version = "0.12.9", features = ["json"] }
stringreader = "0.1"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }