[package]
name = "yral-hot-or-not"
version = "0.1.0"
edition = "2021"
authors = [ "rupansh <rupanshsekar@hotmail.com>" ]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
worker-utils.workspace = true
num-bigint.workspace = true
candid.workspace = true
serde.workspace = true
wasm-bindgen-futures.workspace = true
enum_dispatch.workspace = true

# yral deps
yral-identity = { git = "https://github.com/yral-dapp/yral-identity", rev = "adbf4be5cb62a26f2a90032261321bf1df33f08b", default-features = false, features = [
    "ic-git",
    "wasm-bindgen",
] }
#hon-worker-common = { path =  "../../../yral-common/hon-worker-common" }
hon-worker-common = { git = "https://github.com/dolr-ai/yral-common", branch = "rupansh/hon-game" }
