[package]
name = "yral-pump-n-dump"
version = "0.1.0"
edition = "2021"
authors = [ "rupansh <rupanshsekar@hotmail.com>" ]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace deps
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
futures.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true

# crate specific stuff
enum_dispatch = "0.3.13"
ic-agent = { version = "0.38.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2.15", features = ["js"] }
candid = "0.10.11"
num-bigint = "0.4.6"
uuid = { version = "1.11.0", default-features = false, features = ["serde"] }

# yral specific stuff
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata", rev = "bf89af87c246c73109d65d3febf009e6ed3c4748" }
yral-identity = { git = "https://github.com/yral-dapp/yral-identity", rev = "156bc0e7a4bc3d9a3b4faab4b9b3048e88a0c701", default-features = false, features = ["ic-git"] }
#yral-canisters-client = { path = "../../../yral-common/canisters-client", features = ["backend"] }
#pump-n-dump-common = { path = "../../../yral-common/pump-n-dump-common", package = "yral-pump-n-dump-common" }
yral-canisters-client = { git = "https://github.com/yral-dapp/yral-common", rev = "cc1b810e53ff12ef3319b94738d52d5a3cc73eee", features = ["backend"] }
pump-n-dump-common = { git = "https://github.com/yral-dapp/yral-common", rev = "cc1b810e53ff12ef3319b94738d52d5a3cc73eee", package = "yral-pump-n-dump-common" }


