[package]
name = "yral-upload-video"
version = "0.1.0"
edition = "2021"
authors = [ "ravi-sawlani-yral <ravi@gobazzinga.io>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["macros", "json", "multipart"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { workspace = true }
ic-agent = { version = "0.38.2", default-features = false, features = [ "wasm-bindgen", "pem"] }
k256 = { version = "0.13.4", default-features = false, features = [
    "std",
    "jwk",
] }
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata", rev = "56e3f1f1f5f452673bee17739520c800c1264295"}
candid = "0.10.13"
serde_bytes = "0.11.15"
serde_json.workspace = true
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"]}
tonic-web-wasm-client = "0.6.1"
prost = "0.13.5"
hmac = { version = "0.12.1"}
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.40"

[build-dependencies]
tonic-build = { version = "0.12.0", default-features = false, features = [
    "prost",
] }
